[tool.poetry]
name = "dite"
version = "0.1.0"
description = "Dependency injection container for python."
authors = ["Alexander Gerbik <alexander.gerbik@gmail.com>"]
readme = "README.md"
packages = [
    { include = "dite", from = "src" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
